--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
+spring.datasource.data=classpath:data-dev.sql
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.show-sql=true
