--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:testdb-testing
 spring.jpa.defer-datasource-initialization=true
 spring.profiles.active=test
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
